www/templates/html/css/majors.css
#maincontent h2.subhead {
    text-transform:uppercase;
    color:#3f85ca;
    font-size:.9em;
    margin-top:-18px;
    margin-bottom:15px;
}
#maincontent div.story h2.sec_header,
#maincontent div.story h3,
#maincontent div.story h4,
#maincontent div.story h5 {
    margin-top:1em;
}

.intro {
    font-size:115%;
    line-height:145%;
    }
#toc_nav {
    position:relative;
    font-size:150%;
    width:220px;
    margin-bottom:1em;
    top:10px;
    z-index:45;
}
#toc_bar {
	position:fixed;
	display:none;
	top:0;
	left: 0;
	height:40px;
	width:100%;
	background:#fff;
	text-align:center;	
	z-index:44;
	border-bottom:5px solid #e0e0e0;
	font-size:1.8em;
	padding-top:14px;
	opacity:0.90;
}
#toc_major_name {
	display:none;
	float:left;
	margin:-30px 0 0 215px;
	text-align:center;
}
table.major_quick_points {
    margin-bottom:2em;
}
table.major_quick_points caption,
table.major_quick_points .table_heading {
    display:none;
    visibility:hidden;
}

table.major_quick_points .attr {
    font-weight:bold;
}
table.major_quick_points .value {
    text-align:right;
}
#long_content {margin-top:35px;}
#maincontent ol#toc {
    font-size:.65em;
    position:absolute;
    left:0px;
    background:#f7f7f7 url('images/majorContentsLowerBG.png') no-repeat top left;
    list-style: upper-alpha;
    padding:10px 10px 10px 35px;
    width:600px;
    margin:-7px 0 0 4px;
    border-right:1px solid #ededed;
    border-bottom:1px solid #ededed;
    -moz-box-shadow: 2px 2px 5px #888;
    -moz-border-radius:5px;
    -webkit-box-shadow: 2px 2px 5px #888;
    -webkit-border-radius:5px;
    box-shadow: 2px 2px 5px #888;
    border-radius:5px;
} 
#maincontent ol#toc ol { list-style: decimal;padding:0 0 0 25px;}
#maincontent ol#toc ol ol { list-style: lower-roman;padding:0 0 0 25px;}
#maincontent ol#toc ol ol ol { list-style: lower-alpha;padding:0 0 0 25px;}

#toc_nav a#tocContent {
    background:url('images/majorContents.png') 0 0;
    width:135px;
    height:30px;
    display:block;
    padding:8px 0 0 50px;
    color:#3f85ca;
    z-index:10;
    }
#toc_nav a#tocContent:hover {
    background:url('images/majorContents.png') 0 -39px;
}
#toc_nav a#tocContent:active, #toc_nav a#tocContent:focus {
    color:#3f85ca !important;
    }
a.top {
    float:right;
}

#maincontent p + p.header-paragraph {
    margin-top:1em;
}

#maincontent p + p,
#maincontent h3 + p,
#maincontent h4 + p {
    margin-bottom:0;
}

#maincontent p.college-name, #maincontent p.major-name {display:none;}

#maincontent p.list {
    margin-bottom:0em;
}
#maincontent p.list-indent {
    margin-bottom:0em;
    text-indent:1.5em;
}

#maincontent p.requirement-sec-1 {
    font-weight:bold;
    margin:1em 0 0;
}
#maincontent p.requirement-hours {
    float:right;
    margin-bottom:0em;
}
#maincontent .requirement-underline {
    text-decoration:underline;
}
#maincontent .requirement-ital,
#maincontent .basic-text-ital,
#maincontent .list-ital,
#maincontent .requirement-sec-3-note {
    font-style: italic;
}
#maincontent .requirement-bold,
#maincontent .basic-text-bold,
#maincontent .faculty-list-bold,
#maincontent .list-bold,
#maincontent .header-paragraph-title {
    font-weight: bold;
}
#maincontent p.requirement-sec-2,
#maincontent p.requirement-sec-3,
#maincontent p.requirement-sec-3-ledr,
#maincontent p.requirement-sec-3-note,
#maincontent p.requirement-sec-4 {
    margin:0 1em 0 0;
    display:block;
    clear:both;
}

#maincontent p.requirement-sec-3,
#maincontent p.requirement-sec-3-note,
#maincontent p.requirement-sec-3-ledr {
    margin-left:1em;
    margin-right:2em;
}
#maincontent p.requirement-sec-4,
#maincontent p.requirement-sec-4-ledr {
    margin-left:2em;
    margin-right:3em;
}

#maincontent li.bullet-2 {margin-left:1.1em;}
#maincontent li.bullet-3 {margin-left:2.2em;}

#maincontent p span {
    background-color:#FFF;
}
#maincontent p span.req_desc,
#maincontent p span.req_desc span.requirement-ital {
    padding-bottom:1px;
    border-bottom:2px solid #FFF;
}

#maincontent p span.leader {
    display:block;
    width:100%;
    border-bottom:1px dotted;
    }

#maincontent p span.req_value {
    float:right;
    padding-left:3px;
    margin-top:-1.2em;
}

#maincontent p.basic-text {
    margin:0;
    text-indent: 1.5em;
}

#maincontent p.quick-points,
#maincontent p.major-name {
    display:none;
}

#maincontent p.faculty-list {
    margin:0;
}

#maincontent table p {
    margin:0;
}

